<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
     >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/b_gene_bdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b_generer_bdd"
            android:onClick="genererBDD"/>

        <Button
            android:id="@+id/b_cats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b_categories"
            android:onClick="voirCategories"/>

        <Button
            android:id="@+id/b_recherche"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b_recherche"
            android:onClick="allerRechercher"/>

    </LinearLayout>

    <ListView
        android:id="@+id/liste_film_a"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>
