<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p_titre"
            style="@style/sous_titre"/>

        <EditText
            android:id="@+id/p_titre_r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems ="10"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p_auteur"
            style="@style/sous_titre"/>

        <EditText
            android:id="@+id/p_auteur_r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems ="10"/>
    </LinearLayout>

   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p_anne"
            style="@style/sous_titre"/>

        <EditText
            android:id="@+id/p_annee_r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems ="10"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p_desc"
            style="@style/sous_titre"/>

        <EditText
            android:id="@+id/p_desc_r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems ="10"/>
    </LinearLayout>

    <Button
        android:id="@+id/b_rechercher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/b_recherche"
        android:onClick="rechercher"/>

    <ListView
        android:id="@+id/liste_film_c"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>