<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

       <Button
          android:id="@+id/button"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="supprimer"
           android:onClick="supprimerFilm"/>

      <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
          android:orientation="horizontal" android:layout_width="match_parent"
          android:layout_height="wrap_content">
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/p_titre"
              style="@style/sous_titre"/>

          <TextView
              android:id="@+id/p_titre_f"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content" />
      </LinearLayout>

      <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
          android:orientation="horizontal" android:layout_width="match_parent"
          android:layout_height="wrap_content">
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/p_auteur"
              style="@style/sous_titre"/>


          <TextView
              android:id="@+id/p_auteur_f"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content" />
      </LinearLayout>

      <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
          android:orientation="horizontal" android:layout_width="match_parent"
          android:layout_height="wrap_content">
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/p_anne"
              style="@style/sous_titre"/>

          <TextView
              android:id="@+id/p_annee_f"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content" />
      </LinearLayout>

      <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
          android:orientation="horizontal" android:layout_width="match_parent"
          android:layout_height="wrap_content">
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/p_desc"
              style="@style/sous_titre"/>

          <TextView
              android:id="@+id/p_desc_f"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>